@@ -1,6 +1,7 @@
-﻿PbootCMS V1.2.2 build 2018-09-16
+﻿PbootCMS V1.2.2 build 2018-09-22
 1、新增模板嵌套引用的支持；
 2、新增在线更新涉及数据库时自动备份数据库；
+3、大幅提高Sqlite多条数数据写入速度；
 
 PbootCMS V1.2.1 build 2018-09-12
 1、新增在线升级新版本红点提示；
